--- a/layout.css
+++ b/layout.css
@@ -1,11 +1,27 @@
 #attach {
+	cursor: all-scroll;
 }
-
+h1 {
+text-shadow: 10px 10px 3px red,
+			10px 0px 3px orange, 
+			10px -10px 3px yellow, 
+			-5px -10px 3px green, 
+			-5px 0px 3px blue, 
+			-5px 10px 3px purple;
+color: white;
+}
 body {
 	background-image: url('escheresque.png');
 	background-repeat: repeat;
 }
 
 button {
-	background-color: #7CFC00;
+	background-color: yellow;
+	-webkit-transition: background-color 1s;
+	-moz-transition: background-color 1s;
+	transition: background-color 1s;
+}
+
+button:hover {
+	background-color: green;
 }
