--- a/layout.css
+++ b/layout.css
@@ -23,7 +23,7 @@ div {
 	text-align: center;
 }
 table {
-	text-align: center;
+	margin: auto;
 }
 body {
 	background-image: url('escheresque.png');
@@ -41,4 +41,9 @@ button {
 
 button:hover {
 	background-color: green;
+}
+#controls{
+	width: 700px;
+	margin-left: auto;
+	margin-right: auto;
 }
